--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,16 @@
       providerName="System.Data.SqlClient" />
     <add name="KarateSchool_1__1_ConnectionString3" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\KarateSchool(1)(1).mdf;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1___1_ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\luke.vanberkom\Downloads\KarateSchool(1) (1).mdf&quot;;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1_ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\KarateSchool(1).mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1_ConnectionString1" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\KarateSchool(1).mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1_ConnectionString2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\KarateSchool(1).mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1_ConnectionString3" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\KarateSchool(1).mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
@@ -27,7 +37,7 @@
     </pages>
 	  <authentication mode="Forms">
 		  <forms name=".ASPXFORMSDEMO" loginUrl="logon.aspx"
-			  protection="All" path="/" timeout="30" />
+     protection="All" path="/" timeout="30" />
 	  </authentication>
   </system.web>
   <runtime>
