--- a/Web.config
+++ b/Web.config
@@ -23,6 +23,14 @@
       providerName="System.Data.SqlClient" />
     <add name="KarateSchool_1_ConnectionString3" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\KarateSchool(1).mdf;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1___1_ConnectionString1" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\KarateSchool(1) (1).mdf&quot;;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1___1_ConnectionString2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\KarateSchool(1) (1).mdf&quot;;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1___1_ConnectionString3" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\KarateSchool(1) (1).mdf&quot;;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="KarateSchool_1___1_ConnectionString4" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\KarateSchool(1) (1).mdf&quot;;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
